<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/sensorHeading"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="WORKOUT BUDDY"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/heading1"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="Accelerometer Readings"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/heading2"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="Orientation Readings"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/readingx"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/orientationx"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/readingy"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/orientationy"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/readingz"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/orientationz"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/exerciseMessage"
                style="@android:style/TextAppearance.Large"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="Cycle Number"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cycleNum"
                style="@android:style/TextAppearance.Large"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>

</FrameLayout>